; ModuleID = '/home/carl/AnghaBench/i3/src/extr_regex.c_regex_free.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_regex.c_regex_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regex = type { %struct.regex*, %struct.regex*, %struct.regex* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @regex_free(%struct.regex* %0) #0 {
  %2 = alloca %struct.regex*, align 8
  store %struct.regex* %0, %struct.regex** %2, align 8
  %3 = load %struct.regex*, %struct.regex** %2, align 8
  %4 = icmp ne %struct.regex* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %21

6:                                                ; preds = %1
  %7 = load %struct.regex*, %struct.regex** %2, align 8
  %8 = getelementptr inbounds %struct.regex, %struct.regex* %7, i32 0, i32 2
  %9 = load %struct.regex*, %struct.regex** %8, align 8
  %10 = call i32 @FREE(%struct.regex* %9)
  %11 = load %struct.regex*, %struct.regex** %2, align 8
  %12 = getelementptr inbounds %struct.regex, %struct.regex* %11, i32 0, i32 1
  %13 = load %struct.regex*, %struct.regex** %12, align 8
  %14 = call i32 @FREE(%struct.regex* %13)
  %15 = load %struct.regex*, %struct.regex** %2, align 8
  %16 = getelementptr inbounds %struct.regex, %struct.regex* %15, i32 0, i32 0
  %17 = load %struct.regex*, %struct.regex** %16, align 8
  %18 = call i32 @FREE(%struct.regex* %17)
  %19 = load %struct.regex*, %struct.regex** %2, align 8
  %20 = call i32 @FREE(%struct.regex* %19)
  br label %21

21:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @FREE(%struct.regex*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
